--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -90,7 +90,8 @@ header button.small {
     padding: 0 1vw;
 }
 
-header .btn-group, header input {
+header .btn-group,
+header input {
     height: 100%;
     float: right;
 }
@@ -132,17 +133,21 @@ nav ul {
     list-style-type: none;
 }
 
-nav li:hover button, nav li button:focus {
-    background-color: #DBF4FF; !important;
+nav li:hover button,
+nav li button:focus {
+    background-color: #DBF4FF;
+    !important;
 }
 
-nav li a:focus, nav li a:hover {
+nav li a:focus,
+nav li a:hover {
     outline: none;
     color: #266697;
 }
 
 nav button.selected {
-    background-color: #DBF4FF; !important;
+    background-color: #DBF4FF;
+    !important;
     border: 3px solid lightblue;
     text-decoration: underline;
     outline: none;
@@ -192,7 +197,7 @@ nav #helpButton:focus {
     position: relative;
 }
 
-.menuButtons{
+.menuButtons {
     margin-top: 0.5em;
 }
 
@@ -234,7 +239,7 @@ nav #helpButton:focus {
 .grid-item-content {
     overflow: hidden;
     background: lightblue;
-    border: 1px solid gray;
+    border: 5px solid blue;
     display: flex;
     flex-flow: column;
 }
@@ -250,17 +255,22 @@ nav #helpButton:focus {
     flex: 0 1 auto;
 }
 
-.grid, .grid-item-content .text-container span {
+.grid,
+.grid-item-content .text-container span {
     /* make non-selectable */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+/Edge */
-    user-select: none; /* Standard */
+    -webkit-user-select: none;
+    /* Safari */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE10+/Edge */
+    user-select: none;
+    /* Standard */
 }
 
 .selected.grid-item-content {
-    -webkit-animation: background 0.5s cubic-bezier(1,0,0,1);
-    animation: background 0.5s cubic-bezier(1,0,0,1);
+    -webkit-animation: background 0.5s cubic-bezier(1, 0, 0, 1);
+    animation: background 0.5s cubic-bezier(1, 0, 0, 1);
 }
 
 .highlight.grid-item-content {
@@ -274,11 +284,15 @@ nav #helpButton:focus {
 }
 
 @-webkit-keyframes background {
-    0% { filter: brightness(50%); }
+    0% {
+        filter: brightness(50%);
+    }
 }
 
 @keyframes background {
-    0% { filter: brightness(50%); }
+    0% {
+        filter: brightness(50%);
+    }
 }
 
 .mouseentered.grid-item-content {
@@ -286,7 +300,8 @@ nav #helpButton:focus {
     background: lightgreen;
 }
 
-.scanInactive.grid-item-content, .scanInactive.grid-item-content span {
+.scanInactive.grid-item-content,
+.scanInactive.grid-item-content span {
     background: lightgray !important;
     color: darkgray !important;
     opacity: 0.4;
@@ -303,7 +318,8 @@ nav #helpButton:focus {
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     filter: grayscale(100%);
-    filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+    filter: grayscale(1);
+    /* Microsoft Edge and Firefox 35+ */
 }
 
 .spaced {
@@ -375,6 +391,7 @@ nav #helpButton:focus {
     #syncVisualization {
         display: none;
     }
+
     #syncVisualizationWrapper {
         display: none;
     }
@@ -387,11 +404,17 @@ nav #helpButton:focus {
 }
 
 @media print {
-    .no-print, .no-print *, header {
+
+    .no-print,
+    .no-print *,
+    header {
         display: none !important;
     }
+
     * {
-        -webkit-print-color-adjust: exact !important; /*Chrome, Safari */
-        color-adjust: exact !important;  /*Firefox*/
+        -webkit-print-color-adjust: exact !important;
+        /*Chrome, Safari */
+        color-adjust: exact !important;
+        /*Firefox*/
     }
 }
