--- a/src/css/gridlist.css
+++ b/src/css/gridlist.css
@@ -6,20 +6,22 @@
   right: 0;
   overflow-y: hidden;
 }
+
 .grid {
   position: relative;
   height: 97%;
   list-style: none;
   /* Will be modified by the grid jquery lib, depending on the items */
   -webkit-transition: width 0.2s,
-  height 0.2s;
+    height 0.2s;
   transition: width 0.2s,
-  height 0.2s;
+    height 0.2s;
   padding: 0;
   margin-top: 10px;
   margin-bottom: 10px;
   -webkit-padding-start: 0;
 }
+
 .grid li {
   position: absolute;
   z-index: 1;
@@ -27,19 +29,21 @@
   text-align: center;
   cursor: pointer;
   -webkit-transition: top 0.2s,
-  left 0.2s,
-  width 0.2s,
-  height 0.2s,
-  font-size 0.2s,
-  line-height 0.2s;
+    left 0.2s,
+    width 0.2s,
+    height 0.2s,
+    font-size 0.2s,
+    line-height 0.2s;
   transition: top 0.2s,
-  left 0.2s,
-  width 0.2s,
-  height 0.2s,
-  font-size 0.2s,
-  line-height 0.2s;
+    left 0.2s,
+    width 0.2s,
+    height 0.2s,
+    font-size 0.2s,
+    line-height 0.2s;
 }
-.grid li .grid-item-content, .grid-item-content-placeholder {
+
+.grid li .grid-item-content,
+.grid-item-content-placeholder {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -49,6 +53,7 @@
   margin-left: 10px;
   margin-bottom: 10px;
 }
+
 .grid-item-content.marked {
   outline: 5px solid green !important;
 }
@@ -57,10 +62,12 @@
   -webkit-transition: none;
   transition: none;
 }
+
 .grid li.position-highlight {
   -webkit-transition: none;
   transition: none;
 }
+
 .grid li.position-highlight .grid-item-content-placeholder {
   outline-style: dotted;
   outline-width: 2px;
